	-Made changes to enemy rendering and encounter generation code in order to remove EEnemySizes table, saving ~30 bytes.
	-Filled in all enemy graphics data, in order to verify that all pointer calculations are working properly. Looks good so far.
	-Trophy now appears at the end of the game, along with an overcomplicated shimmering effect

KNOWN BUGS:

TODO:
	Mandatory:
	-Implement all enemy special abilities
	-Connect visual and sound effects
	-Consider booting enemy AI tables, logic, or both into R or E banks to make more room for sound effects
		-Maybe the tables can go, but there's not a lot of room left in E after enemy graphics

	Nice:
	-Setup screen logo
	-Add calls for pain and excited avatars
	-Make enemies with legendary resistance take 50% less damage from all sources
		-Preferably don't factor this in when showing damage messages
		-Nerfs blight significantly against bosses...
	-Party members gain delta HP, delta MP on level up
	-Random damage and healing offsets
	-Avatars not being updated after last logic frame
	-Being guarded reduces blight damage
	-Make bosses able to target dead allies
	-Make SHARP give all allies a single use damage doubling that clears on use

	Ehh:
	-Position enemies in "group skirmish" formation?

	-Looks like I probably need to remove the individual spell effects. 
		-Maybe instead define a few effect patterns, and define a palette per spell
		-Or just go back to a single simple effect that they all use.
		-Then transfer the enemy AI into the E bank

	Additional sounds to consider:
		-Footsteps
		-Monster roar near exit
		-Battle victory jingle
		-Game victory jingle
		-Crackling campfire sound (would need to be a loop, so it's certainly out of scope)

	DOESN'T REQUIRE LOGIC:
		-Improve in-maze campfire graphics to look less squished when they appear
		-Add more text & messages
		-Create all enemy graphics
		-Create all enemy AI tables
		-Create all encounter tables
		-Tune maze exit tables
		-Create all visual effects